--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<!-- Latest compiled and minified CSS & JS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="header text-center">
+	<div class="container header text-center">
 	<h1>Employee Data Management</h1>
 	<h3>A Comprehensive Directory of Employee Billable Hours</h3>
 	</div>
